--- a/src/app/makefile
+++ b/src/app/makefile
@@ -3,6 +3,6 @@ BIN  := lzz3
 LIBS := cpp output config util
 # DL defined in make.$CONFIG
 MORELIBS = basil$(OPTSUFFIX) lua $(DL)
-MORELIBDIRS = $(BASILLIBDIR)
-INCDIRS = $(BASILSRCDIR)
+MORELIBDIRS = $(BASILCC_LIB)
+INCDIRS = $(BASILCC_SRC)
 include $(MAKETOOLS)/make.include
