--- a/src/output/Makefile
+++ b/src/output/Makefile
@@ -1,3 +1,4 @@
 DIR := output
-INCDIRS := $(BASILCC_SRC)
+LOCALINCDIRS := config util
+INCDIRS := $(BASILCC_SRC)/basil
 include $(MAKETOOLS)/make.include
