--- a/src/cpp/Makefile
+++ b/src/cpp/Makefile
@@ -1,3 +1,4 @@
 DIR := cpp
-INCDIRS := $(BASILCC_SRC)
+INCDIRS := $(BASILCC_SRC)/basil
+LOCALINCDIRS := lzz config util
 include $(MAKETOOLS)/make.include
