--- a/src/app/Makefile
+++ b/src/app/Makefile
@@ -1,8 +1,9 @@
 DIR  := app
 BIN  := lzz3
-LIBS := cpp output config util
+LIBS := cpp lzz config util
 # DL defined in make.$CONFIG
 MORELIBS = basil$(OPTSUFFIX) lua $(DL)
 MORELIBDIRS = $(BASILCC_LIB)
-INCDIRS = $(BASILCC_SRC)
+INCDIRS = $(BASILCC_SRC)/basil
+LOCALINCDIRS = util config lzz cpp
 include $(MAKETOOLS)/make.include
